--- a/src/app/theme/_statistics.scss
+++ b/src/app/theme/_statistics.scss
@@ -8,22 +8,20 @@
     padding-bottom: 28px;
 
     .nu-statistics__info__row {
-      width: 100%;      
-      // box-shadow: inset 0 0 5px #000;
+      display: flex;
+      align-items: center;
+      width: 100%;
     }
 
     .nu-statistics__user {  
-      display: flex;
-      justify-content: flex-end;
-      padding-bottom: 10px;      
-
-      .nu-statistics__name {
-        font-weight: 500;
-        padding-right: 10px;
-        white-space: nowrap;
-        overflow: hidden;
-      }
+      flex-grow: 1; 
+      text-align: right;
+      padding-right: 12px;
     }    
+
+    .nu-statistics__name {
+      font-weight: 500;
+    }
 
     .nu-statistics__stat {
       color: $gray-600;
